fixed header alignment

--- a/public/style.css
+++ b/public/style.css
@@ -97,3 +97,7 @@ ul, a,th,td{
   .h4{
 	color: whitesmoke;
   }
+
+  .spacer5px{
+	  height: 5px;
+  }
